--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,34 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+form label {
+  display: block;
+  margin: 10px;
+  float: left;
+  clear: both;
+}
+
+
+form label input {
+  display: block;
+  width: 300px;
+  border-radius: 5px;
+  border: 1px solid white;
+  height: 30px;
+  margin-left: 10px;
+}
+
+
+form input[type=submit]{
+  display: block;
+  margin: 10px;
+  border: 1px solid white;
+  background-color: black;
+  color: white;
+  width: 300px;
+  height: 30px;
+  font-size: 18px;
+  float: left;
+  clear: both;
+}
